--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alpha Clash</title>
+    <title>Alpha Clash Pro</title>
+    <!-- Daisy UI and Tailwind -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <section class="home"></section>
+    <section class="play-ground"></section>
+    <section class="score"></section>
+  </body>
 </html>
