--- a/index.html
+++ b/index.html
@@ -78,15 +78,18 @@
         <!-- keyboard end -->
         <!-- life score -->
         <div class="flex justify-between w-3/4">
+          <!-- Display life line -->
           <button class="btn rounded-full bg-[#894189] text-white px-2">
             Life
             <img src="images/heart.svg" alt="">
-            <span>1</span>
+            <span id="current-life">5</span>
           </button>
+
+          <!-- Display Score -->
           <button class="btn rounded-full bg-[#360490] text-white px-2">
             Score
             <img src="images/dollar.svg" alt="">
-            <span>1</span>
+            <span id="current-score">0</span>
           </button>
         </div>
       </div>
