--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 
   <!-- custom css -->
   <link rel="stylesheet" href="styles/style.css" />
+
+  <style>
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100%;
+      background-color: #040014;
+      /* match your main content color */
+    }
+
+    footer {
+      margin-top: 0 !important;
+    }
+  </style>
 </head>
 
 <body class="font-poppins">
@@ -39,6 +54,7 @@
             <p id="show-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
           </div>
         </div>
+
         <!-- keyboard start-->
         <div>
           <div class="my-1 flex w-full justify-center gap-1">
@@ -76,6 +92,7 @@
           </div>
         </div>
         <!-- keyboard end -->
+
         <!-- life score -->
         <div class="flex justify-between w-3/4">
           <!-- Display life line -->
@@ -97,14 +114,50 @@
 
     <!-- playground end -->
     <!-- final score start -->
-    <section class="score flex justify-center items-center min-h-screen hidden">
+    <section id="score-Page" class="flex justify-center items-center min-h-screen hidden">
       <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
-        <h1 class="text-8xl"><span class="font-extrabold">Socre:</span> <span>14</span></h1>
-        <button class="btn bg-white  text-black">Play Again</button>
+        <h1 class="text-5xl">Game Over!</h1>
+        <h1 class="text-8xl"><span class="font-extrabold">Socre:</span> <span id="final-scoreShow">0</span></h1>
+        <button onclick="playAgain()" class="btn bg-white  text-black">Play Again</button>
         <p>Practice will make you Pro</p>
       </div>
     </section>
   </main>
+
+  <footer
+    class="footer flex flex-col md:flex-row items-center justify-between bg-neutral text-neutral-content p-6 mt-0 rounded-t-2xl shadow-inner w-full">
+
+    <!-- Left side: Hash and Developed by -->
+    <aside class="flex items-center space-x-3">
+      <svg width="36" height="36" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+        class="text-blue-400">
+        <path
+          d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z">
+        </path>
+      </svg>
+      <p class="text-lg font-semibold text-blue-400">Developed by:-----</p>
+    </aside>
+
+    <!-- Center content: Name and department -->
+    <div class="text-center space-y-1 px-4 md:px-0">
+      <a href="https://masfiqurnehal.github.io/Protfolio/" target="_blank"
+        class="text-white text-lg font-bold underline decoration-yellow-400 underline-offset-4 hover:text-yellow-300 transition duration-300 ease-in-out">
+        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Md. Masfiqur Rahman Nehal
+      </a>
+      <p class="text-sm text-gray-300 leading-tight">
+        Department of Computer Science & Engineering <br />
+        Daffodil International University
+      </p>
+    </div>
+
+    <!-- Right side: Copyright -->
+    <nav class="text-center md:text-right mt-4 md:mt-0">
+      <span class="text-gray-400 text-xs tracking-wide">
+        © 2025 <span class="font-semibold text-white">Nehal</span> — All Rights Reserved
+      </span>
+    </nav>
+  </footer>
+
   <script src="scripts/utility.js"></script>
   <script src="scripts/alpha-clash.js"></script>
 </body>
